name:                reddit-scrape
version:             0.1.0.0
synopsis:            get shit from reddit

license:             BSD3
license-file:        LICENSE
author:              Matthew Peddie
maintainer:          mpeddie@gmail.com
copyright:           Matthew Peddie

category:            Games
build-type:          Simple

cabal-version:       >=1.10

executable reddit-scrape
  ghc-options: -threaded -Wall -O2 -dynamic
  main-is:             reddit-scrape.hs
  other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8
                     , text >= 1.1.1.3
                     , errors >= 1.4.7
                     , aeson >= 0.7.0
                     , transformers >= 0.3
                     , http-client >= 0.3.8
                     , time >= 1.4.2 && < 1.5
                     , bytestring >= 0.10.4.0
                     , old-locale >= 1.0.0.6
                     , optparse-applicative >= 0.10.0
                     , process >= 1.2
  hs-source-dirs:      src/
  default-language:    Haskell2010
